--- a/SCSS/_mediaQueries.scss
+++ b/SCSS/_mediaQueries.scss
@@ -123,7 +123,7 @@ $height-auto: auto;
    nav.navbar-2 {
       z-index: 10000;
       display: block;
-      position: absolute;
+      position: fixed;
       // 'top' property will be added by JS
       left: -100%;
       background-color: #fff;
